@@ -468,6 +468,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4571) Partial fix hack for {{fulllurl:}} in action=render
 * (bug 3502) Bowtie symbol for TeX
 * (bug 4000) Support for \textstyle et al. in <math>
+* (bug 1663) support color in TeX formulas
 
 
 === Caveats ===
